Fix alignment of contact options

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ h1, h2, h3, h4, h5, h6 {
   list-style-type: none;
   margin-top: 60px;
   margin-bottom: -45px;
+  padding-left: 0;
 }
 
 .contacts .contact {
